# robit-ros2-homework

./: README.md
Day1/HW1/turtlesim_cli/: CMakeLists.txt  package.xml
Day1/HW1/turtlesim_cli/include/turtlesim_cli/: turtlesim_controller.hpp
Day1/HW1/turtlesim_cli/src/: turtlesim_controller.cpp
Day1/HW2/turtlesim_draw/: CMakeLists.txt  package.xml
Day1/HW2/turtlesim_draw/include/turtlesim_draw/: draw_node.hpp
Day1/HW2/turtlesim_draw/src/: draw_node.cpp
Day1/HW3/chatter_cli/: CMakeLists.txt  package.xml
Day1/HW3/chatter_cli/src/: listener_node.cpp  talker_node.cpp
Day2/HW1/qt_gui_ros/: CMakeLists.txt  package.xml
Day2/HW1/qt_gui_ros/include/qt_gui_ros/: main_window.hpp  qnode.hpp
Day2/HW1/qt_gui_ros/src/: main.cpp  main_window.cpp  qnode.cpp
Day2/HW1/qt_gui_ros/ui/: mainwindow.ui
Day2/HW2/ros2_topic_qt_ui/: CMakeLists.txt  package.xml
Day2/HW2/ros2_topic_qt_ui/include/ros2_topic_qt_ui/: main_window.hpp  qnode.hpp
Day2/HW2/ros2_topic_qt_ui/src/: main.cpp  main_window.cpp  qnode.cpp
Day2/HW2/ros2_topic_qt_ui/ui/: mainwindowdesign.ui
Day3/camera_qt_ui_pkg/: CMakeLists.txt  package.xml
Day3/camera_qt_ui_pkg/include/camera_qt_ui_pkg/: main_window.hpp  qnode.hpp
Day3/camera_qt_ui_pkg/src/: image_subscriber.cpp  main.cpp  main_window.cpp  qnode.cpp
Day3/camera_qt_ui_pkg/ui/: mainwindow.ui
Day3/usb_camera/config/: camera_config.yaml
HW1/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
HW1/ros2_ws/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
HW1/ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
HW1/ros2_ws/install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
HW1/ros2_ws/install/turtlesim/share/turtlesim/: package.sh
HW1/ros2_ws/log/: latest_build  latest_list
HW1/ros2_ws/src/cpp_pubsub/: CMakeLists.txt
HW1/ros2_ws/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
HW2/custom_interfaces/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
HW2/custom_interfaces/msg/: InputType.msg
HW2/custom_interfaces/msg/log/: latest_list
HW2/publisher/: CMakeLists.txt  package.xml
HW2/publisher/src/: publisher.cpp
HW2/subscriber/: CMakeLists.txt  package.xml
HW2/subscriber/src/: subscriber.cpp
HW3/turtle_control/: CMakeLists.txt  package.xml
HW3/turtle_control/src/: turtle_controller_gui.cpp  turtle_controller_gui.hpp  turtle_controller_node.cpp
